--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.4.8",
+    "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
+    "bcrypto": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.1",
