--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.8",
     "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^5.22.0",
+    "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
     "bcrypto": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "multer": "^1.4.5-lts.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
