--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@prisma/client": "^5.22.0",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
-    "bcrypto": "^5.5.2",
+    "crypto": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
